fixing the jump in the burger

--- a/assets/css/header-footer.css
+++ b/assets/css/header-footer.css
@@ -83,7 +83,7 @@ h1 a:hover {
 
 .menu-click {
     left: 0%;
-    transition: all .5s;
+    transition: all 1s;
     visibility: visible;
     z-index: 100;
 }
@@ -347,8 +347,6 @@ h1 a:hover {
     top: 100%;
     margin-top: -4px;
 }
-
-.burguer-click {}
 
 .burguer-click span {
     background: white;
